[project]
name = "asuna_api"
version = "0.3.3"
description = "An async python wrapper for the asuna api"
authors = [{ name = "JDJG3493", email = "jdjgbot@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["aiohttp", "yarl"]
keywords = ["wrapper", "api", "random"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
repository = "https://github.com/Senarc-Studios/asuna_api"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
